Rework about the rest note in speaker(4). - Obsolete the sc_rest callback.  The rest note operation can be done by   the common spkr layer.  This also fixes PR kern/56060.   This work-in-progress patch was left in my local tree for years. :( - Improve calculations of tone and rest length.