sys/dev/spkr_audio.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: spkr_audio.c,v 1.10 2021/04/03 03:21:53 isaki Exp $	*/
+/*	$NetBSD: spkr_audio.c,v 1.11 2021/04/03 04:10:30 isaki Exp $	*/
 
 /*-
  * Copyright (c) 2016 Nathanial Sloss <nathanialsloss@yahoo.com.au>
@@ -27,7 +27,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: spkr_audio.c,v 1.10 2021/04/03 03:21:53 isaki Exp $");
+__KERNEL_RCSID(0, "$NetBSD: spkr_audio.c,v 1.11 2021/04/03 04:10:30 isaki Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -71,21 +71,11 @@ spkr_audio_tone(device_t self, u_int xhz, u_int ticks)
 #ifdef SPKRDEBUG
 	device_printf(self, "%s: %u %u\n", __func__, xhz, ticks);
 #endif /* SPKRDEBUG */
-	audiobell(sc->sc_audiodev, xhz, hztoms(ticks),
-	    sc->sc_spkr.sc_vol, 0);
-}
 
-static void
-spkr_audio_rest(device_t self, int ticks)
-{
-	struct spkr_audio_softc *sc = device_private(self);
-	
-#ifdef SPKRDEBUG
-	aprint_debug_dev(self, "%s: %d\n", __func__, ticks);
-#endif /* SPKRDEBUG */
-	if (ticks > 0)
-		audiobell(sc->sc_audiodev, 0, hztoms(ticks),
-		    sc->sc_spkr.sc_vol, 0);
+	if (xhz == 0 || ticks == 0)
+		return;
+
+	audiobell(sc->sc_audiodev, xhz, hztoms(ticks), sc->sc_spkr.sc_vol, 0);
 }
 
 static int
@@ -113,7 +103,7 @@ spkr_audio_attach(device_t parent, device_t self, void *aux)
 	if (!pmf_device_register(self, NULL, NULL))
 		aprint_error_dev(self, "couldn't establish power handler\n"); 
 
-	spkr_attach(self, spkr_audio_tone, spkr_audio_rest);
+	spkr_attach(self, spkr_audio_tone);
 }
 
 static int
